# humantext

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Changelog.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: backfill-releases.yml  ci.yml  release.yml
Docs/: README.md  architecture.md  demo.md  design.md  how-humantext-works.md  llm-integration-investigation.md  prd.md  rewrite-arena.md  roadmap.md  schema.md  signals.md  span-rewrite-planner.md  versioning.md
data/datasets/core-v1/: manifest.json
data/datasets/core-v1/cases/: analyze-human-formal-001.json  analyze-structure-allowlist-001.json  rewrite-genericity-001.json  rewrite-guardrail-001.json  (+2 more)
migrations/: 001_init.sql
scripts/: check_version_sync.py  prepare_release.py
src/humantext/: __init__.py  version.py
src/humantext/cli/: main.py
src/humantext/core/: __init__.py  analysis.py  models.py  segmentation.py  suggest.py
src/humantext/detectors/: __init__.py  signals.py
src/humantext/eval/: __init__.py  dataset.py  metrics.py  report.py  runner.py
src/humantext/learning/: __init__.py  style.py
src/humantext/llm/: __init__.py  client.py  config.py
src/humantext/mcp/: __init__.py  server.py
src/humantext/rewrite/: __init__.py  arena.py  diff_explainer.py  engine.py  guardrails.py  planner.py
src/humantext/storage/: __init__.py  database.py
tests/: test_analysis.py  test_cli.py  test_eval.py  test_llm_config.py  test_mcp.py  test_review.py  test_storage.py  test_suggest.py
(+4 files in other folders)
