[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "humantext"
version = "0.1.0"
description = "Local-first editorial intelligence engine to detect and revise AI-style writing."
authors = [{ name = "HumanText Contributors" }]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
humantext = "humantext.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
