[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "humantext"
dynamic = ["version"]
description = "Local-first editorial intelligence engine to detect and revise AI-style writing."
authors = [{ name = "HumanText Contributors" }]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
humantext = "humantext.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "humantext.version.__version__" }

[tool.setuptools.package-data]
humantext = ["VERSION"]
